# sDNA_GH

./: .gitattributes  .gitignore  Metahopper_build_instructions.md  Overview.md  README.docx  README.md  build_components.bat  create_install_and_test_release.bat  create_release_sDNA_GH_zip.bat  create_release_sdna-gh.zip.bat  cspell.json  hatch_build.py  install_sdna-gh.zip.bat  license.md  make_and_install_new_release.bat  make_readme.docx.bat  pyproject.toml
.cspell/: custom-dictionary.txt
GHsDNA/: config.ini  config.toml
GHsDNA/GHsDNA/: GHsDNA_launcher.py  config.ini  tools.py
dev/: Geom_types_and_Allowed_Geom_Checks.gh  Prepare Edges CSV Text for Gelphi.ghuser  Random_colours_generator.gh  Shp_Data_Tree_component.gh  Write_text_file.ghuser  another_gh_doc.gh  exit_Rhino.gh  files_to_ship_in_each_release.txt  make_gephi_edges_csv.gh  readme_component.gh  remotely_call_another_component.gh  run_exit_Rhino.bat  sDNA_build_components.gh  test_adding_user_obj_component.gh  unpack_network_radii.gh
dev/batch_files/: copy_sDNA_GH_to_GH_UserObjects.bat  unblock_all_files_powershell.bat
dev/docs/: Metahopper_build_instructions.md  developer_build_path_design_notes.md  integral-advanced-config.csv  options_design_notes.md
dev/rhino_server/: client.py  start_server_and_call_client_in_Rhino.py
dev_tools/: GH_userobject_and_gha_build_instructions.txt  GHsDNA_builder.gh  GHsDNA_builder.shp  components_23_parse_max_min_type_hints_no_opts_no_gdm.gh  create_tiny__init__dot_py.bat  developer_build_path_design_notes.md  files_to_ship_in_each_release.txt  sDNA_GH_builder.gh  sDNA_build_components.gh  test_import_sDNA_GH_tools.gh
example_GH_defns/: Rhino_geom_one_comp.gh
sDNA_GH/: Bake_UserText.ghuser  Build_components.ghuser  GhPython Script.ghuser  Parse_Data.ghuser  Python.ghuser  Read_Geom.ghuser  Read_Shp.ghuser  Read_Usertext.ghuser  Recolour_Objects.ghuser  Unload_sDNA.ghuser  Write_Shp.ghuser  Write_Usertext.ghuser  config.ini  config.toml  launcher.py  main.py  sDNA_Access_Map.ghuser  sDNA_General.ghuser  sDNA_Geodesics.ghuser  sDNA_Hulls.ghuser  sDNA_Int_From_OD.ghuser  sDNA_Integral.ghuser  sDNA_Learn.ghuser  sDNA_Line_Measures.ghuser  sDNA_Net_Radii.ghuser  sDNA_Predict.ghuser  sDNA_Prepare.ghuser  sDNA_Skim.ghuser
test_cases/: 15x15randomGrid.3dm  2x2.3dm  2x2_visibility_hidden.3dm  50x50RandomGridNetwork_with_layer.3dm  5x18_random_grid_network.3dm  5x18_random_grid_network.3dm.rhl  5x7_random_grid_network_half_layer.3dm  CreateRandom_GH_GridNetwork.gh  CreateRandom_Rhino_GridNetwork.gh  Rhino_8_API_tests.gh  Rhino_8_Read_Geom_(Rhino)_and_Recolour_Existing_Polylines.gh  Rhino_8_Read_Geom_(Rhino)_and_Recolour_Objects_of_same_type_test.gh  Rhino_8_Read_Geom_(Rhino)_and_Recolour_Objects_test.gh  Rhino_8_Read_Geom_(Rhino)_and_Recolour_Polylines.gh  Test_Shp_Data_Tree.gh  Test_Store_Unicode_In_User_Text.3dm  browse_sDNA_Integral_results_50x50_(slow).gh  config_auto_tools.gh  data_tree_replace_filter_branch.gh  do_not_delete_output_of_named_input.gh  run_api_tests.py  single_component_test_template.gh  test_GUIDs_unchanged_by_components.gh  test_individual_comps_Rhino_Geom.gh  test_mass_sync_and_desync.gh  test_multiple_compnts_Rhino_geom_sDNA.gh  test_multiple_compnts_Rhino_geom_sDNA_desync_parse.gh  test_multiple_components_GH_geom.gh  test_multiple_components_GH_geom_recolour_arcs.gh  test_read_Usertext.gh  test_read_shp_and_plot_with_and_without_bake.gh  test_read_shp_and_plot_with_and_without_bake_multiple_components.gh  test_read_shp_with_and_without_bake.gh  test_single_compnt_Rhino_geom_sDNA.gh  test_single_compnt_no_state_selected_Rhino_geom_sDNA.gh  test_single_compnt_one_layer_Rhino_geom_sDNA.gh  test_single_compnt_one_layer_selected_Rhino_geom_sDNA.gh  test_single_compnt_selected_Rhino_geom_sDNA.gh  test_single_component_GH_geom.gh  test_single_component_GH_geom_no_config.gh  (+4 more)
tests/: GH_geom_multiple_components.gh  sDNA.bat  sDNA_GH.gh  test_logger.py
(+342 files in other folders)
