[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"




[project]
name = "sDNA_GH"
version = "3.0.0.alpha_4"
authors = [{name = "James Parrott", email = "james.parrott@proton.me"}]
description = "sDNA is a world leading tool for Spatial Design Network Analysis.  sDNA_GH is a plug-in for Grasshopper, that runs sDNA on Rhino and Grasshopper geometry and data. "
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=2.7"
keywords = ["Rhino", "Grasshopper", "control", "components", "runner", "tests"]
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python",
]
dependencies = [
    "toml_tools",
    "IronPyShp",
    "Mapclassif-Iron",
]


[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build]
artifacts = [
  "dookie.txt",
]





[tool.hatch.build.targets.wheel.force-include]
"components/automatically_built" = "components/automatically_built"
"components\manually_built" = "components\manually_built"